# openapi.json
@@ -583,6 +583,11 @@
             "title": "Material Ids",
             "type": "array"
           },
+          "product_media_intent": {
+            "default": false,
+            "title": "Product Media Intent",
+            "type": "boolean"
+          },
           "publishing_identity_id": {
             "anyOf": [
               {
@@ -718,6 +723,11 @@
             "minLength": 1,
             "title": "Message",
             "type": "string"
+          },
+          "product_media_intent": {
+            "default": false,
+            "title": "Product Media Intent",
+            "type": "boolean"
           },
           "publishing_identity_id": {
             "format": "uuid",
